@@ -32,6 +32,6 @@ public class VisualToggleCharacterModeHandler extends AbstractEditorActionHandle
 {
     protected boolean execute(Editor editor, DataContext context, Command cmd)
     {
-        return CommandGroups.getInstance().getMotion().toggleVisual(editor, context, Command.FLAG_MOT_CHARACTERWISE);
+        return CommandGroups.getInstance().getMotion().toggleVisual(editor, context, cmd.getCount(), cmd.getRawCount(), Command.FLAG_MOT_CHARACTERWISE);
     }
 }
